--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="container">
                 <h2>Get in Touch</h2>
                 <p>Interested in learning more about our container farming solutions?</p>
-                <a href="mailto:contact@verticalguam.com" class="cta-button">Contact Us</a>
+                <a href="mailto:adam@anchormarianas.com" class="cta-button">Contact Us</a>
             </div>
         </section>
     </main>
